--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.3'
 services:
  xubuntu:
   hostname: xubuntu.urawski.com
-  image: uraf/ubuntu-xfce-x2go
+  image: uraf/ubuntu-xfce-x2go:18.04
   restart: always
   dns_search: urawski.com
   ports:
